--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
@@ -95,6 +95,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Динамични данни картографиране уеб (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Определяне на условия и действия за промяна на полета и елементи във формуляра. (Automatic Translation)
 delete-action=Изтриване на действие? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Изтриване на условие? (Automatic Translation)
 delete-current-page=Изтриване на текущата страница (Automatic Translation)
 delete-field-dialog-title=Изтривате ли полето? (Automatic Translation)
@@ -138,6 +139,7 @@ enter-the-parameter=Въведете параметъра. (Automatic Translatio
 enter-the-path=Въведете пътя. (Automatic Translation)
 enter-the-rest-service-url=Въведете URL адрес на услуга за ОСТАНАЛИТЕ. (Automatic Translation)
 enter-time-in-milliseconds=Въведете времето в милисекунди. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Израз (Automatic Translation)
 field-name-is-already-in-use=Името на полето вече е в употреба. (Automatic Translation)
 field-types-basic-elements=Основни елементи (Automatic Translation)
@@ -145,6 +147,7 @@ field-types-customized-elements=Персонализирани елементи 
 field-types-sidebar-title=Добавяне на елементи (Automatic Translation)
 field-validation-failed=Неуспешна проверка на потребителско поле. (Automatic Translation)
 field-visibility-expression=Областта видимостта израз (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Параметър име на филтър (Automatic Translation)
 form-entries=Записи на формуляри (Automatic Translation)
 form-settings=Настройки за формуляри (Automatic Translation)
@@ -154,6 +157,7 @@ from-data-provider=От доставчик на данни (Automatic Translatio
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Изберете местоположение от карта. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Изберете опции от матрица. (Automatic Translation)
 grid-field-type-label=Мрежа (Automatic Translation)
 help-text=Помощен текст (Automatic Translation)
@@ -186,6 +190,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Направо към страница (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключова дума (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Оставете формата? (Automatic Translation)
 leave-page=Напускане
 manage-templates=Управление на шаблони
@@ -266,7 +271,6 @@ save-form=Запиши формуляра (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Записване (Automatic Translation)
 script-file=Скрипт файл (Automatic Translation)
-section-field-type-label=Група полета (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Изберете съществуващ формуляр или добавите формуляр да се показват в това приложение. (Automatic Translation)
 select-field-type-description=Изберете опции от списък. (Automatic Translation)
 select-field-type-label=Изберете от списъка (Automatic Translation)
