--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
@@ -95,6 +95,7 @@ ddm-template-service-help=Tarjoaa dynamic data mapping (DDM) template lisäyksen
 ddmweb-configuration-name=Dynaamiset tietokentät
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Määrittele ehdot ja toiminnot lomakkeen kenttien ja elementtien muuttamiseksi.
 delete-action=Poista toiminto?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Poistetaanko ehto?
 delete-current-page=Poista nykyinen sivu
 delete-field-dialog-title=Poista kenttä?
@@ -138,6 +139,7 @@ enter-the-parameter=Syötä parametri.
 enter-the-path=Syötä polku.
 enter-the-rest-service-url=Syötä REST palvelun URL-osoite.
 enter-time-in-milliseconds=Määritä aika millisekunteina.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Lauseke
 field-name-is-already-in-use=Kentän nimi on jo käytössä
 field-types-basic-elements=Peruselementit
@@ -145,6 +147,7 @@ field-types-customized-elements=Mukautetut Elementit
 field-types-sidebar-title=Lisää Elementit
 field-validation-failed=Mukautetun kentän vahvistus epäonnistui.
 field-visibility-expression=Kentän näkyvyyden lauseke.
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Suodata Parametrin Nimi
 form-entries=Lomakekirjaukset
 form-settings=Lomakkeen asetukset
@@ -154,6 +157,7 @@ from-data-provider=Lomakkeen Tiedontarjoaja
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Valitse sijainti kartalta.
 geolocation-field-type-label=Paikkatieto
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Valitse valinnat matriisista.
 grid-field-type-label=Ruudukko
 help-text=Aputeksti
@@ -186,6 +190,7 @@ json[stands-for]=JSON
 jump-to-page=Siirry Sivulle
 jump-to-page-x=Siirry Sivulle {0}
 keyword=Avainsana
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Poistu lomakkeelta?
 leave-page=Poistu
 manage-templates=Hallinnoi esitysmalleja
@@ -266,7 +271,6 @@ save-form=Tallenna Lomake
 saved-x=Tallennetu &#149; {0}
 saving=Tallentaa
 script-file=Skripti-tiedosto
-section-field-type-label=Kentät-ryhmä
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Valitse olemassa oleva lomake tai lomake näytettäväksi tässä sovelluksessa.
 select-field-type-description=Valitse tai useampia vaihtoehtoja luettelosta.
 select-field-type-label=Valitse Luettelosta
