--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
@@ -95,6 +95,7 @@ ddm-template-service-help=A távoli szolgáltatást biztosítja a dinamikus adat
 ddmweb-configuration-name=Dinamikus adat-hozzárendelés, web
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Meghatározza a feltételeket és műveleteket az űrlapon lévő mezők és elemek változtatásához.
 delete-action=Művelet törlése?
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Törli a feltételt?
 delete-current-page=Aktuális oldal törlése
 delete-field-dialog-title=Törli a mezőt?
@@ -138,6 +139,7 @@ enter-the-parameter=Írja be a paramétert.
 enter-the-path=Írja be az útvonalat.
 enter-the-rest-service-url=Add meg a REST szolgáltatás URL-t.
 enter-time-in-milliseconds=Adja meg az időt ezredmásodpercben.
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Kifejezés
 field-name-is-already-in-use=A mező név már használatban van.
 field-types-basic-elements=Alapvető elemek
@@ -145,6 +147,7 @@ field-types-customized-elements=Egyéni elemek
 field-types-sidebar-title=Elemek hozzáadása
 field-validation-failed=Az egyik saját mező érvényesítése sikertelen.
 field-visibility-expression=Mező láthatósági kifejezés
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Paraméternév szűrése
 form-entries=Űrlap adatok
 form-settings=Űrlap beállítások
@@ -154,6 +157,7 @@ from-data-provider=Feladó adatszolgáltatója
 ftl[stands-for]=FreeMarker
 geolocation-field-type-description=Válasszon egy helyet a térképről.
 geolocation-field-type-label=Helymeghatározás
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Válassza ki a lehetőségeket a mátrixból.
 grid-field-type-label=Rács
 help-text=Súgó szöveg
@@ -186,6 +190,7 @@ json[stands-for]=JSON
 jump-to-page=Ugrás az oldalra
 jump-to-page-x=Ugrás a {0} oldalra
 keyword=Kulcsszó
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Elhagyja az űrlapot?
 leave-page=Kilépés
 manage-templates=Sablonok kezelése
@@ -266,7 +271,6 @@ save-form=Űrlap mentése
 saved-x=Elmentve &#149; {0}
 saving=Mentés
 script-file=Szkript fájl
-section-field-type-label=Mezők csoport
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Válassz ki egy létező űrlapot vagy hozz létre egy újat, ami megjelenik ebben az alkalmazásban.
 select-field-type-description=Válasszon egy vagy több lehetőséget egy listából.
 select-field-type-label=Válasszon a listából
