--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
@@ -95,6 +95,7 @@ ddm-template-service-help=(Automatic Copy)
 ddmweb-configuration-name=Web de cartografiere date dinamice (Automatic Translation)
 define-condition-and-action-to-change-fields-and-elements-on-the-form=Definesc condiţiile şi acţiunile să modificaţi câmpurile şi elementele din formular. (Automatic Translation)
 delete-action=Ştergeţi acţiunea? (Automatic Translation)
+delete-all-entries=Delete All Entries (Automatic Copy)
 delete-condition=Ştergeţi starea? (Automatic Translation)
 delete-current-page=Şterge pagina curentă (Automatic Translation)
 delete-field-dialog-title=Ștergeți câmpul? (Automatic Translation)
@@ -138,6 +139,7 @@ enter-the-parameter=Introduceţi parametru. (Automatic Translation)
 enter-the-path=Introduceţi calea. (Automatic Translation)
 enter-the-rest-service-url=Introduceţi URL-ul serviciului restul. (Automatic Translation)
 enter-time-in-milliseconds=Intre timp în milisecunde. (Automatic Translation)
+export-all-entries=Export All Entries (Automatic Copy)
 expression=Expresia (Automatic Translation)
 field-name-is-already-in-use=Numele de câmp este deja în uz. (Automatic Translation)
 field-types-basic-elements=Elemente de bază (Automatic Translation)
@@ -145,6 +147,7 @@ field-types-customized-elements=Elemente personalizate (Automatic Translation)
 field-types-sidebar-title=Adauga elemente (Automatic Translation)
 field-validation-failed=O validare câmp particularizat nu a reuşit. (Automatic Translation)
 field-visibility-expression=Câmp expresie de vizibilitate (Automatic Translation)
+fieldset-field-type-label=Fields Group (Automatic Copy)
 filter-parameter-name=Nume de parametru filtru (Automatic Translation)
 form-entries=Înregistrările din formulare (Automatic Translation)
 form-settings=Setările de forma (Automatic Translation)
@@ -154,6 +157,7 @@ from-data-provider=La furnizor de date (Automatic Translation)
 ftl[stands-for]=FreeMarker (Automatic Copy)
 geolocation-field-type-description=Selectați o locație dintr-o hartă. (Automatic Translation)
 geolocation-field-type-label=Geolocation (Automatic Translation)
+get-email-notifications=Get Email Notifications (Automatic Copy)
 grid-field-type-description=Selectați opțiunile dintr-o matrice. (Automatic Translation)
 grid-field-type-label=Grilă (Automatic Translation)
 help-text=Textul de ajutor (Automatic Translation)
@@ -186,6 +190,7 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Sari la pagina (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Cuvinte cheie (Automatic Translation)
+last-entry-sent-x-ago=Last entry sent {0} ago (Automatic Copy)
 leave-form=Lasa forma? (Automatic Translation)
 leave-page=Paraseste
 manage-templates=Gestionează Șabloane
@@ -266,7 +271,6 @@ save-form=Salvaţi formularul (Automatic Translation)
 saved-x=Saved &#149; {0} (Automatic Copy)
 saving=Salvarea (Automatic Translation)
 script-file=Fişier de script (Automatic Translation)
-section-field-type-label=Grupă câmpuri (Automatic Translation)
 select-an-existing-form-or-add-a-form-to-be-displayed-in-this-application=Selectaţi o machetă existentă sau pentru a adăuga o formă pentru a fi afişate în această aplicaţie. (Automatic Translation)
 select-field-type-description=Selectați opțiuni dintr-o listă. (Automatic Translation)
 select-field-type-label=Selectaţi din lista (Automatic Translation)
